# rr-chatbot

./: .env.example  .gitignore  ADMIN_GUIDE.md  ALL_CODE.md  GETTING_STARTED.md  README.md  SUMMARY.md  USERMANUAL.md  app.py  check_environment.sh  data_processing_system.py  dataviz_system.py  main.py  package-lock.json  package.json  requirements.txt  start_app.bat  start_app.sh
backend/: .env.example  DATA_VIZ_API_README.md  ENHANCEMENTS.md  README.md  alembic.ini  app.py  config.py  create_admin.py  data_visualization_api.py  database.py  dependencies.py  main.py  pyproject.toml  python.exe.stackdump  requirements.txt  setup.sh  test_app.py  test_data_viz_api.py
backend/api/: main.py
backend/blueprints/: data_visualization.py
backend/config/: model_config.yaml
backend/core/: logging.py
backend/data_processing/: clustering_service.py  data_analyzer.py  data_cleaner.py  data_explorer.py  data_loader.py  data_wrangler.py
backend/examples/: data_viz_client.py  sample_data.csv
backend/migrations/: env.py
backend/models/: chat.py  dashboard.py  db.py  file.py  log.py  user.py
backend/routes/: auth_routes.py  chat.py  chat_routes.py  dashboard_routes.py  data_modeling_routes.py  data_routes.py  data_visualization_routes.py  feedback_routes.py  file_routes.py  model_routes.py  monitoring_routes.py  user_routes.py  visualization_routes.py
backend/scripts/: run_tests.sh
backend/services/: ai_service.py  api_gateway.py  auth_service.py  cache_service.py  chat_service.py  claude_service.py  data_analysis_service.py  data_analysis_service_backup.py  data_analysis_service_new.py  data_analyzer.py  data_processing_service.py  database_service.py  file_service.py  llm_service.py  ml_service.py  model_manager.py  model_service.py  monitoring_service.py  visualization_service.py
backend/templates/: dashboard.html
backend/tests/: config.py  conftest.py  test_auth_routes.py  test_models.py  (+1 more)
(+102 files in other folders)
